--- a/contato.html
+++ b/contato.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Contato</h1>
-    <p>Entre em contatto pelo email fabiol@crfsp.org.br </p>
+    <p>Entre em contato pelo email fabiol@crfsp.org.br </p>
 </body>
 </html>
