--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>sistema de cadastros jogos</h1>
+    <h2>teste 2</h2>
     <script src="app.js"></script>
 </body>
 </html>
