--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>sistema de cadastros jogos</h1>
     <h2>teste 2</h2>
+    <h1>teste3</h1>
     <script src="app.js"></script>
 </body>
 </html>
