outras alteracoes ficha

--- a/contato.html
+++ b/contato.html
@@ -9,5 +9,6 @@
 <body>
     <h2>Contato</h2>
     <p>Entre em contato pelo email fabiol@crfsp.org.br </p>
+    <p>outros contatos fichas</p>
 </body>
 </html>
